log
data/Ruslan/02.c:3:3: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 in{
   ^
